--- a/style.css
+++ b/style.css
@@ -67,3 +67,82 @@ p {
     position: relative;
     background: url('../logo/case-1.jpg') no-repeat center center/cover;
 }
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-grow: 1;
+    height: 100%;
+}
+
+.container .content-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    text-align: start;
+    padding: 0 50px;
+    max-width: 50%;
+}
+
+.container .content-1 h1 {
+    font-weight: 500;
+    font-size: 700;
+    line-height: 1.2;
+}
+
+.container .content-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: start;
+    max-width: 35%;
+    height: 500px;
+    background: #fff;
+    color: #333;
+    padding: 0 30px;
+}
+
+.content-2 .content-form {
+    width: 100%;
+    padding: 0 4px;
+}
+
+.content-2 .content-form label {
+    display: block;
+    margin: 5px;
+}
+
+.content-2 .content-form .form-control {
+    margin: 10px;
+}
+
+.content-2 .content-form input {
+    width: 100%;
+    padding: 4px;
+    height: 35px;
+    border: rgb(230, 212, 212) 1px solid;
+    border-radius: 3px;
+}
+
+.content-2 .content-form input:focus {
+    outline: 4px solid rgb(114, 195, 233);
+}
+
+.content-2 #btn {
+    width: 100%;
+    padding: 4px;
+    margin: 7px 0;
+    height: 50px;
+    color: #fff;
+    background: rgb(14, 164, 233);
+    border: rgb(230, 212, 212) 1px solid;
+    border-radius: 3px;
+}
+
+.content-2 #btn:hover {
+    opacity: 0.9;
+    background: #333;
+}
